<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>freebird</artifactId>
        <groupId>io</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>netty</artifactId>

    <dependencies>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.11.Final</version>
        </dependency> <dependency>

        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.6</version>
        <optional>true</optional>
    </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <executable>java</executable> <!-- executable指的是要执行什么样的命令 -->
                    <arguments>
                       <!-- <argument>-DsystemProperty1=value1</argument> &lt;!&ndash; 这是一个系统属性参数 &ndash;&gt;
                        <argument>-DsystemProperty2=value2</argument>  这是一个系统属性参数 -->
                        <argument>-XX:MaxPermSize=256m</argument> <!-- 这是一个JVM参数 -->
                        <!--automatically creates the classpath using all project dependencies,
                            also adding the project build directory -->
                        <argument>-classpath</argument> <!-- 这是classpath属性，其值就是下面的<classpath/> -->
                        <classpath/> <!-- 这是exec插件最有价值的地方，关于工程的classpath并不需要手动指定，它将由exec自动计算得出 -->
                        <argument>io.freebird.netty.echoserver.EchoServer</argument> <!-- 程序入口，主类名称 -->
                        <argument>127.0.0.1</argument> <!-- 程序的第一个命令行参数 -->
                        <argument>94</argument> <!-- 程序的第二个命令行参数 -->
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>6</source>
                    <target>6</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>